--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,7 @@
 	<div class = "banner">
 		<img class="newappIcon" src="images/newapp-icon.png">
 		<p class = "appTitle">
+		Hello
 			Favorites Organizer powered by Cloudant
 		</p>
 	</div>
@@ -28,6 +29,7 @@
 			<a class = "infoImg" onclick="toggleAppInfo()">Help</a>
 		</div>
 		<div id='appinfo' class = 'appinfo' style='display: none;'>
+		AppInfo
 						This application helps you organize your favorite files.</br>
 						Supports all file types, like Audio, Video, Photos, Text etc.</br>
 						Click on Add icon to create a new category for your files. Provide a title and description for the category in the text fields.</br>
