--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
 	<div class = "banner">
 		<img class="newappIcon" src="images/newapp-icon.png">
 		<p class = "appTitle">
-		Hello
+		Hello2
 			Favorites Organizer powered by Cloudant
 		</p>
 	</div>
